fixed slideshow layout issue. minor changes to layout to accomodate the fix

--- a/style.css
+++ b/style.css
@@ -8,15 +8,25 @@ h1, h2, h3 {
     text-transform: uppercase;
 }
 
+.slideshow-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+}
+
 .carousel {
     width: 100%;
     height: 677px;
+    grid-column: span 2;
+    grid-row: 2;
 }
 
 .carousel-image {
     width: 100%;
     height: 600px;
     padding: 20px;
+    grid-column: 1;
+    grid-row: 2;
 }
 
 .carousel-title {
@@ -24,7 +34,10 @@ h1, h2, h3 {
 }
 
 .carousel-text {
-    float: right;
+    grid-column: 2;
+    grid-row: 2;
+    justify-self: center;
+    align-self: center;
 }
 
 /**** Nav Bar ****/
@@ -55,12 +68,9 @@ h1, h2, h3 {
     height: 800px;
 }
 
-.work-heading-light {
-    float: right;
-}
-
-.work-heading-bold {
-    float: right;
+#work-heading {
+    grid-column: span 2;
+    text-align: center;
 }
 
 /**** About ****/
